--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -8,3 +8,13 @@ footer{
 a{
     text-decoration: none;
 }
+
+@media screen and (max-width: 700px){
+    footer{
+        width: 100%;
+    }
+    footer p{
+        font-size: 10px;
+        
+    }
+}
