--- a/src/components/sobre/sobre.css
+++ b/src/components/sobre/sobre.css
@@ -42,14 +42,19 @@ section{
     }
 
     .border {
-        width: 80%;
+        width: 100%;
         display: flex;
         justify-content: center;
+        flex-direction: column;
         align-items: center;
         text-align: center;
-        
+        padding: 20px;
     }
+    .border h1 {
+        font-size: 30px;
+    }
+
     .border p {
-        font-size: 20px;
+        font-size: 17px;
     }
 }
