--- a/src/menuteste/styles.css
+++ b/src/menuteste/styles.css
@@ -87,7 +87,7 @@
     top: 6rem;
     right: 0;
     width: 100%;
-    height: calc(100% - 6rem);
+    height: calc(50% - 4rem);
     background-color: #ffffff;
     z-index: 2;
     transform: translateY(-100%);
@@ -95,7 +95,7 @@
   }
   
   .menu-nav-active {
-    transform: translateY(0%);
+    transform: translateY(-4%);
   }
   
   .nav-link {
@@ -128,11 +128,15 @@
     height: auto;
     flex-direction: row;
     width: auto;
-    transform: translateY(0%);
+    transform: translateY(-10%);
+    width: 100%;
   }
 
   .nav-link {
     margin: 0 1.5rem;
   }
+  .navbar-logo {
+    transform: translateY(7%);
+}
 }
   
