--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -72,8 +72,20 @@
         flex-direction: column;
         align-items: center;
         text-align: center;
-        width: 100%;
+        width: 50%;
         
+    }
+
+    .dentroo h3{
+        font-size: 20px;
+    }
+    .dentroo h1{
+        font-size: 35px;
+    }
+
+    .dentroo p{
+        text-align: center;
+        font-size: 20px;
     }
     .dentroo {
         margin-left: 0px;
@@ -86,3 +98,5 @@
         text-align: center;
     }
  }
+
+
