--- a/src/pages/projetos/projetos.css
+++ b/src/pages/projetos/projetos.css
@@ -40,5 +40,61 @@
 }
 
 @media screen and (max-width: 700px){
-    
+    .titlees{
+        display: flex;
+        margin: 0;
+        width: 100%;
+        align-items: center;
+        text-align: center;
+        justify-content: center;
+    }
+
+    .titlees h2{
+        font-size: 30px;
+    }
+
+    .sites{
+        display: flex;
+        margin: 0;
+        justify-content: center;
+        width: 100%;
+    }
+    .sites h1{
+        text-align: center;
+        font-size: 20px;
+        margin-top: 50px;
+    }
+
+    .titles {
+        display: flex;
+        
+        
+        
+    }
+    .titles h1{
+        font-size: 20px;
+        text-align: center;
+        margin: 0;
+    }
+
+    .websites{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 70%;
+    }
+
+    .websites img {
+        width: 100%;
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .designer {
+        margin-top: 50px;
+        display: flex;
+        flex-direction: column;
+    }
 }
